<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home_navigation"
        android:contentDescription="@string/home"
        android:enabled="true"
        android:icon="@drawable/ic_home_24"
        android:title="@string/home"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/detection_navigation"
        android:contentDescription="@string/detection"
        android:enabled="true"
        android:icon="@drawable/ic_flip_camera_24"
        android:title="@string/detection"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/history_navigation"
        android:contentDescription="@string/history"
        android:enabled="true"
        android:icon="@drawable/ic_history_24"
        android:title="@string/history"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profile_navigation"
        android:contentDescription="@string/profile"
        android:enabled="true"
        android:icon="@drawable/ic_person_24"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>