<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:auth="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.auth.fragment.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/siv_coffeebid_logo"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@drawable/coffeebid_logo"
            app:civ_border_color="?attr/colorPrimary"
            app:civ_border_width="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".1" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/login_title"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSurface"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/siv_coffeebid_logo" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_subtitle_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/subtitle_auth"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_login" />

        <include
            android:id="@+id/progress_bar"
            layout="@layout/circular_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_subtitle_login" />

        <com.aplimelta.coffeebidapp.customview.CoffeeEditText
            android:id="@+id/cet_login_email"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="16dp"
            android:autofillHints="Email"
            android:gravity="center_vertical"
            android:hint="Masukkan email"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progress_bar"
            auth:email="true" />

        <com.aplimelta.coffeebidapp.customview.CoffeeEditText
            android:id="@+id/cet_login_password"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="8dp"
            android:autofillHints="Password"
            android:hint="Masukkan password"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="@id/cet_login_email"
            app:layout_constraintStart_toStartOf="@id/cet_login_email"
            app:layout_constraintTop_toBottomOf="@id/cet_login_email"
            auth:password="true" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@id/cet_login_email"
            app:layout_constraintStart_toStartOf="@id/cet_login_email"
            app:layout_constraintTop_toBottomOf="@id/cet_login_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>